# Lab_Programmazione

./: CMakeLists.txt  Date.cpp  Date.h  README.md  ToDo.cpp  ToDo.h  ToDoList.cpp  ToDoList.h  main.cpp
test/: test_date.cpp  test_todo.cpp  test_todolist.cpp
